--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
 - release tag auto
 - lints, test, quality gates
-- DNS A records (+ gather IP)
+- update countries on data load
+- get chunk count before load
