--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 - monitoring
 - dev/prod
 - lints, test, quality gates: Sonar in kuber manifest?
+- k8s dev->prod upd
 
 - chart
 - get chunk count before load
