--- a/notes/TODO
+++ b/notes/TODO
@@ -1,7 +1,7 @@
-- monitoring
-- dev/prod
-- lints, test, quality gates: Sonar in kuber manifest?
-- k8s dev->prod upd
+- monitoring ?
+
+- cleanup build dirs
+- grafana deploy
 
 - chart
 - get chunk count before load
@@ -9,4 +9,7 @@
 DONE:
 - release tag auto
 - update countries on data load
+- dev/prod
+- fix: variables in release
+- lints, test, quality gates: Sonar in kuber manifest
 
