--- a/notes/TODO
+++ b/notes/TODO
@@ -3,6 +3,12 @@
 - cleanup build dirs
 - grafana deploy
 
+- center logo in left column
+3-5-10 - br
+cunks - smaller
+chart - no dots
+update chart on filter change
+
 - chart
 - get chunk count before load
 
